got rid of unnecessary this. accessors, refactored game logic to keep game start and end in game and out of snake, made IRectangle class